--- a/greeting.html
+++ b/greeting.html
@@ -2,15 +2,16 @@
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>عيد الأضحى مبروك!</title>
   <style>
     body {
-      background: black;
-      overflow: hidden;
-      font-family: 'Amiri', serif;
-      text-align: center;
-      color: white;
-      animation: crazy-bg 0.2s infinite alternate;
+  margin: 0;
+  overflow: hidden;
+  font-family: 'Amiri', serif;
+  text-align: center;
+  color: white;
+  position: relative;
     }
     @keyframes crazy-bg {
       0% { background: #ff0055; }
@@ -65,6 +66,7 @@
       font-size: 30px;
       background: linear-gradient(to right, gold, red);
       -webkit-background-clip: text;
+      background-clip: text;
       -webkit-text-fill-color: transparent;
       font-weight: bold;
       animation: pulse 2s infinite;
@@ -74,20 +76,59 @@
       50% { transform: scale(1.1); }
       100% { transform: scale(1); }
     }
+    @media (max-width: 768px) {
+  h1 {
+    font-size: 30px;
+  }
+
+  .animals img {
+    width: 100px;
+  }
+
+  .signature {
+    font-size: 20px;
+  }
+
+  .message h2 {
+    font-size: 24px;
+  }
+
+  img {
+    max-width: 100%;
+    height: auto;
+  }
+}
+.bg-color {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -2;
+  animation: crazy-bg 0.2s infinite alternate;
+}
+
+@keyframes crazy-bg {
+  0% { background-color: #ff0055; }
+  50% { background-color: #00ffaa; }
+  100% { background-color: #5500ff; }
+}
+
 
 </style>
 </head>
 <body>
+    <div class="bg-color"></div>
   <audio autoplay loop>
     <source src="media/TOM8FkqIu5w.mp3" type="audio/mpeg">
   </audio>
-  <img src="media/pngegg (1) - Copy.png" style="position: absolute; top: -1; right: 0; width: 400px;">
-  <img src="media/pngegg (1).png" style="position: absolute; top: 0; left: 0; width: 400px;">
-  <img src="media/pngegg (6) - Copy.png" style="position: absolute; bottom: 0 ; left: 0; width: 300px;">
-  <img src="media/pngegg (6).png" style="position: absolute; bottom: 0 ; right: 0; width: 300px;">
-  <img src="media/pngegg (5).png" style="position: absolute; bottom: 30px; left: 50%; transform: translateX(-50%); width: 250px; z-index: 10;">
-  <img src="media/Vibe Reaction GIF by reactionseditor.gif" style="position: absolute; bottom: 120px; left: 450px; width: 230px; z-index: 10;">
-  <img src="media/Vibe Reaction GIF by reactionseditor.gif" style="position: absolute; bottom: 120px; right: 450px; width: 230px; z-index: 10;">
+<img src="media/pngegg (1) - Copy.png" style="position: absolute; top: 0; right: 0; width: 25vw; max-width: 350px;">
+<img src="media/pngegg (1).png" style="position: absolute; top: 0; left: 0; width: 25vw; max-width: 350px;">
+<img src="media/pngegg (6) - Copy.png" style="position: fixed; bottom: 0; left: 0; width: 300px; z-index: 1;">
+<img src="media/pngegg (6).png" style="position: fixed; bottom: 0; right: 0; width: 300px; z-index: 1;">
+<img src="media/pngegg (5).png" style="position: absolute; bottom: -350px; left: 50%; transform: translateX(-50%); width: 30vw; max-width: 280px; z-index: 10;">
+<img src="media/Vibe Reaction GIF by reactionseditor.gif" style="position: absolute; bottom: -400px; left: 20vw; width: 20vw; max-width: 200px; z-index: 10;">
+<img src="media/Vibe Reaction GIF by reactionseditor.gif" style="position: absolute; bottom: -400px; right: 20vw; width: 20vw; max-width: 200px; z-index: 10;">
 
 
 
