--- a/greeting.html
+++ b/greeting.html
@@ -120,16 +120,13 @@
   <audio autoplay loop>
     <source src="media/TOM8FkqIu5w.mp3" type="audio/mpeg">
   </audio>
-<img src="media/pngegg (1) - Copy.png" style="position: absolute; top: 0; right: 0; width: 25vw; max-width: 350px;">
-<img src="media/pngegg (1).png" style="position: absolute; top: 0; left: 0; width: 25vw; max-width: 350px;">
-<img src="media/pngegg (6) - Copy.png" style="position: fixed; bottom: 0; left: 0; width: 300px; z-index: 1;">
-<img src="media/pngegg (6).png" style="position: fixed; bottom: 0; right: 0; width: 300px; z-index: 1;">
-<img src="media/pngegg (5).png" style="position: absolute; bottom: -350px; left: 50%; transform: translateX(-50%); width: 30vw; max-width: 280px; z-index: 10;">
-<img src="media/Vibe Reaction GIF by reactionseditor.gif" style="position: absolute; bottom: -400px; left: 20vw; width: 20vw; max-width: 200px; z-index: 10;">
-<img src="media/Vibe Reaction GIF by reactionseditor.gif" style="position: absolute; bottom: -400px; right: 20vw; width: 20vw; max-width: 200px; z-index: 10;">
-
-
-
+<img src="media/pngegg (1).png" style="position: absolute; top: 0; left: 0; width: 20vw;">
+<img src="media/pngegg (1) - Copy.png" style="position: absolute; top: 0; right: 0; width: 20vw;">
+<img src="media/pngegg (6).png" style="position: fixed; bottom: 0; right: 0; width: 19vw; z-index: 1;">
+<img src="media/pngegg (6) - Copy.png" style="position: fixed; bottom: 0; left: 0; width: 19vw; z-index: 1;">
+<img src="media/pngegg (5).png" style="position: absolute; bottom: -17vw; left: 50%; transform: translateX(-50%); width: 17vw; z-index: 10;">
+<img src="media/Vibe Reaction GIF by reactionseditor.gif" style="position: absolute; bottom: -18vw; left: 20vw; width: 10vw; z-index: 10;">
+<img src="media/Vibe Reaction GIF by reactionseditor.gif" style="position: absolute; bottom: -18vw; right: 20vw; width: 10vw; z-index: 10;">
 
 
   <div class="decorations">
