--- a/greeting.html
+++ b/greeting.html
@@ -1,160 +1,161 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>عيد الأضحى مبروك!</title>
   <style>
     body {
-      margin: 0;
-      overflow: hidden;
-      font-family: 'Amiri', serif;
-      text-align: center;
-      color: white;
-      position: relative;
-      background: url('https://i.imgur.com/sJ3CT4V.gif') repeat;
-      background-size: cover;
-      animation: crazy-bg 0.2s infinite alternate;
-    }
-
-    @keyframes crazy-bg {
-      0% { background-color: #ff0055; }
-      50% { background-color: #00ffaa; }
-      100% { background-color: #5500ff; }
+  margin: 0;
+  overflow: hidden;
+  font-family: 'Amiri', serif;
+  text-align: center;
+  color: white;
+  position: relative;
     }
 
     h1 {
       font-size: 50px;
       color: yellow;
       animation: shake 0.5s infinite;
-      margin-top: 50px;
-      z-index: 2;
-      position: relative;
     }
-
     @keyframes shake {
-      0%, 100% { transform: rotate(-2deg); }
-      50% { transform: rotate(2deg); }
+      0% { transform: translate(1px, 1px) rotate(0deg); }
+      10% { transform: translate(-1px, -2px) rotate(-1deg); }
+      20% { transform: translate(-3px, 0px) rotate(1deg); }
+      30% { transform: translate(3px, 2px) rotate(0deg); }
+      40% { transform: translate(1px, -1px) rotate(1deg); }
+      50% { transform: translate(-1px, 2px) rotate(-1deg); }
+      60% { transform: translate(-3px, 1px) rotate(0deg); }
+      70% { transform: translate(3px, 1px) rotate(-1deg); }
+      80% { transform: translate(-1px, -1px) rotate(1deg); }
+      90% { transform: translate(1px, 2px) rotate(0deg); }
+      100% { transform: translate(1px, -2px) rotate(-1deg); }
     }
-
     .animals {
       display: flex;
       justify-content: center;
-      gap: 40px;
-      margin: 20px auto;
-      z-index: 2;
-      position: relative;
+      gap: 20px;
+      margin-top: 20px;
     }
-
     .animals img {
       width: 150px;
-      animation: spin 6s linear infinite;
+      height: auto;
+      animation: spin 4s linear infinite;
     }
-
     @keyframes spin {
-      0% { transform: rotateY(0); }
-      100% { transform: rotateY(360deg); }
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
     }
+    .decorations {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+  background: url('https://i.imgur.com/sJ3CT4V.gif') repeat top center;
+  z-index: -1;
 
-    .message h2 {
-      font-size: 35px;
-      margin-top: 30px;
-      color: white;
-      z-index: 2;
-      position: relative;
     }
-
     .signature {
-      margin-top: 30px;
-      font-size: 28px;
+      margin-top: 40px;
+      font-size: 30px;
       background: linear-gradient(to right, gold, red);
       -webkit-background-clip: text;
       background-clip: text;
       -webkit-text-fill-color: transparent;
       font-weight: bold;
       animation: pulse 2s infinite;
-      z-index: 2;
-      position: relative;
     }
-
     @keyframes pulse {
-      0%, 100% { transform: scale(1); }
+      0% { transform: scale(1); }
       50% { transform: scale(1.1); }
+      100% { transform: scale(1); }
     }
-
     @media (max-width: 768px) {
-      h1 { font-size: 30px; }
-      .animals img { width: 100px; }
-      .signature { font-size: 20px; }
-      .message h2 { font-size: 24px; }
-    }
+  h1 {
+    font-size: 30px;
+  }
 
-    .top-left, .top-right, .bottom-left, .bottom-right, .center-bottom {
-      position: absolute;
-      z-index: 1;
-    }
+  .animals img {
+    width: 100px;
+  }
 
-    .top-left { top: 0; left: 0; width: 20vw; }
-    .top-right { top: 0; right: 0; width: 20vw; }
-    .center-bottom {
-      bottom: -17vw;
-      left: 50%;
-      transform: translateX(-50%);
-      width: 17vw;
-    }
+  .signature {
+    font-size: 20px;
+  }
 
-    .gif-vibe {
-      position: absolute;
-      width: 10vw;
-      bottom: -18vw;
-      z-index: 10;
-    }
+  .message h2 {
+    font-size: 24px;
+  }
 
-    .gif-left { left: 20vw; }
-    .gif-right { right: 20vw; }
-  </style>
+  img {
+    max-width: 100%;
+    height: auto;
+  }
+}
+.bg-color {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -2;
+  animation: crazy-bg 0.2s infinite alternate;
+
+}
+
+@keyframes crazy-bg {
+  0% { background-color: #ff0055; }
+  50% { background-color: #00ffaa; }
+  100% { background-color: #5500ff; }
+}
+
+
+</style>
 </head>
 <body>
-
+    <div class="bg-color"></div>
   <audio autoplay loop>
     <source src="media/TOM8FkqIu5w.mp3" type="audio/mpeg">
+  </audio>
+<img src="media/pngegg (1).png" style="position: absolute; top: 0; left: 0; width: 20vw;">
+<img src="media/pngegg (1) - Copy.png" style="position: absolute; top: 0; right: 0; width: 20vw;">
+<img src="media/pngegg (6).png" style="position: fixed; bottom: 0; right: 0; width: 19vw; z-index: 1;">
+<img src="media/pngegg (6) - Copy.png" style="position: fixed; bottom: 0; left: 0; width: 19vw; z-index: 1;">
+<img src="media/pngegg (5).png" style="position: absolute; bottom: -17vw; left: 50%; transform: translateX(-50%); width: 17vw; z-index: 10;">
+<img src="media/Vibe Reaction GIF by reactionseditor.gif" style="position: absolute; bottom: -18vw; left: 20vw; width: 10vw; z-index: 10;">
+<img src="media/Vibe Reaction GIF by reactionseditor.gif" style="position: absolute; bottom: -18vw; right: 20vw; width: 10vw; z-index: 10;">
+
+
+  <div class="decorations">
+   <div class="bg-color"></div> 
+  </div>
+  <audio autoplay loop>
+    <source src="https://your-mp3-link.com/eid-song.mp3" type="audio/mpeg">
     متصفحك لا يدعم تشغيل الموسيقى 🎶
   </audio>
-
-  <!-- صور الزينة -->
-  <img src="media/pngegg (1).png" class="top-left" />
-  <img src="media/pngegg (1) - Copy.png" class="top-right" />
-  <img src="media/pngegg (5).png" class="center-bottom" />
-  <img src="media/Vibe Reaction GIF by reactionseditor.gif" class="gif-vibe gif-left" />
-  <img src="media/Vibe Reaction GIF by reactionseditor.gif" class="gif-vibe gif-right" />
-
-  <!-- العنوان -->
   <h1 id="greeting-text">عيد سعيد يا بطل! 🐑🎊</h1>
 
-  <!-- صور الحيوانات -->
   <div class="animals">
-    <img src="media/pngegg (4).png" alt="خروف بكاب ونظارات" />
-    <img src="media/pngegg (4).png" alt="بقرة بكاب ونظارات" />
+    <img src="media/pngegg (4).png" alt="خروف بكاب ونظارات">
+    <img src="media/pngegg (4).png" alt="بقرة بكاب ونظارات">
   </div>
 
-  <!-- الرسالة -->
   <div class="message">
-    <h2>
-      عائلات الهندسة الكبير محمد وقيع ترسل لـ <span id="username">صديقنا</span> تهنئة حارة بمناسبة عيد الأضحى 🎉🕋
+    <h2 style="font-size: 35px; color: white; margin-top: 30px;">
+      عائلات الهندسة الكبير محمد وقيع ترسل لـ <span id="username"></span> تهنئة حارة بمناسبة عيد الأضحى 🎉🕋
     </h2>
   </div>
 
-  <!-- التوقيع -->
   <div class="signature">✨ m7md Wke3 ✨</div>
 
-  <!-- تغيير الاسم -->
   <script>
     const urlParams = new URLSearchParams(window.location.search);
     const name = urlParams.get('name');
-    if (name) {
-      document.getElementById('username').textContent = name;
-      document.getElementById('greeting-text').textContent = `كل عام وأنت بخير يا ${name} 🎉🐏`;
-    }
+    document.getElementById('username').textContent = name;
+    document.getElementById('greeting-text').textContent = `كل عام وأنت بخير يا ${name} 🎉🐏`;
   </script>
 </body>
 </html>
